# patch-rexx

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  book.toml  justfile
.claude/: settings.local.json
.github/workflows/: ci-linux.yml  ci-macos.yml  claude-code-review.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  SUMMARY.md  builtins.md  error-system.md  examples.md  external-resolution.md  language-status.md  lsp.md  parse-engine.md  quickstart.md  scoping.md  trace.md  value-model.md
docs/design/: end-name-validation.md  interpret.md  overview.md  signal-conditions.md
examples/: address_shell.rexx  arithmetic.rexx  conversions.rexx  csv_processor.rexx  factorial.rexx  fibonacci.rexx  file_renamer.rexx  fizzbuzz.rexx  hello.rexx  interpret_calc.rexx  log_parser.rexx  parse_demo.rexx  queues.rexx  rexxfile  select_menu.rexx  signal_traps.rexx  stem_arrays.rexx  strings.rexx  trace_demo.rexx  words.rexx
scripts/: generate-examples-docs.sh
src/: ast.rs  builtins.rs  env.rs  error.rs  eval.rs  external.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  value.rs
src/lsp/: actions.rs  analysis.rs  bif_docs.rs  completion.rs  definition.rs  diagnostics.rs  hints.rs  hover.rs  mod.rs  server.rs  symbols.rs  util.rs
tests/: conformance.rs  phase1.rs  phase10.rs  phase11.rs  phase12a.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  phase9.rs  rexxfile.rs
