[package]
name = "patch-rexx"
version = "0.1.0"
edition = "2024"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"
description = "A modern REXX interpreter in Rust"

[dependencies]
# Arbitrary-precision decimal arithmetic (REXX's core numeric model)
bigdecimal = "0.4"
num-bigint = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# REPL line editing
rustyline = "15"

# Regex (for PARSE template patterns and BIFs)
regex = "1.11"

# Home directory (for profile/config)
home = "0.5"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Opinionated: enable pedantic by default, selectively allow the noisy ones
pedantic = { level = "warn", priority = -1 }
# These pedantic lints are too noisy for real code
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Nursery lints worth catching early
redundant_clone = "warn"
trait_duplication_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_fallible_conversions = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
